--- a/packages/apps/lightning-ui-docs/package.json
+++ b/packages/apps/lightning-ui-docs/package.json
@@ -41,8 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^6.5.12",
-    "storybook-addon-turbo-build": "^1.1.0",
-    "webpack": "^5.76.0"
+    "storybook-addon-turbo-build": "^1.1.0"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6"
