feature(Storybook): starts initial upgrade to v7

--- a/packages/apps/lightning-ui-docs/package.json
+++ b/packages/apps/lightning-ui-docs/package.json
@@ -3,8 +3,8 @@
   "sideEffects": false,
   "private": true,
   "scripts": {
-    "start": "yarn run generateStorybookData && start-storybook --no-manager-cache -p 8000",
-    "build": "yarn run generateStorybookData && build-storybook",
+    "start": "yarn run generateStorybookData && storybook dev -p 8000",
+    "build": "yarn run generateStorybookData && storybook build",
     "storybook": "start-storybook -p 6006",
     "generateStorybookData": "node ./scripts/generate-theme-props-table.mjs",
     "styleDocs": "node bin/translationScript.js"
@@ -22,17 +22,16 @@
     "@lightningjs/ui-components": "workspace:^",
     "@lightningjs/ui-components-theme-base": "workspace:^",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-docs": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/addon-storysource": "^6.5.12",
-    "@storybook/builder-webpack4": "^6.5.12",
-    "@storybook/html": "^6.5.12",
-    "@storybook/manager-webpack4": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.24",
+    "@storybook/addon-docs": "^7.0.24",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
+    "@storybook/addon-mdx-gfm": "^7.0.24",
+    "@storybook/addon-storysource": "^7.0.24",
+    "@storybook/html": "^7.0.24",
+    "@storybook/html-webpack5": "^7.0.24",
+    "@storybook/testing-library": "^0.2.0",
     "@yarnpkg/pnpify": "^4.0.0-rc.21",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
@@ -40,8 +39,8 @@
     "line-reader-sync": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^6.5.12",
-    "storybook-addon-turbo-build": "^1.1.0"
+    "storybook": "^7.0.24",
+    "storybook-addon-turbo-build": "^2.0.1"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6"
