--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^6.0.0",
