--- a/packages/apps/lightning-ui-docs/package.json
+++ b/packages/apps/lightning-ui-docs/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-storysource": "^7.0.24",
     "@storybook/html": "^7.0.24",
     "@storybook/html-webpack5": "^7.0.24",
+    "@storybook/mdx1-csf": "^1.0.0",
     "@storybook/testing-library": "^0.2.0",
     "@yarnpkg/pnpify": "^4.0.0-rc.21",
     "babel-jest": "^29.0.3",
