feature(Storybook): adds linter fixes for MDX files"

--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -20,7 +20,7 @@
   "main": "./dist/lightning-ui-components.min.mjs",
   "types": "./dist/lightning-ui-components.d.ts",
   "scripts": {
-    "start": "yarn run generateStorybookData && yarn start-storybook --no-manager-cache -p 8000",
+    "start": "yarn run generateStorybookData && storybook dev -p 8000",
     "build": "rm -rf ./dist && rollup --config ../../../rollup/rollup.config.js --name lightning-ui-components",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --colors --silent",
     "test:updateSnapshot": "NODE_OPTIONS=--experimental-vm-modules jest --updateSnapshot --colors",
