--- a/packages/apps/lightning-ui-docs/package.json
+++ b/packages/apps/lightning-ui-docs/package.json
@@ -40,6 +40,7 @@
     "line-reader-sync": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-gfm": "^3.0.1",
     "storybook": "^7.0.24",
     "storybook-addon-turbo-build": "^2.0.1"
   },
