feature(Storybook): changes exports in package to conditionals

--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -11,13 +11,13 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/lightning-ui-components.min.mjs",
-      "require": "./dist/lightning-ui-components.min.cjs",
-      "types": "./dist/lightning-ui-components.d.ts"
+      "red": "./dist/lightning-ui-components.min.mjs",
+      "yellow": "./dist/lightning-ui-components.min.cjs",
+      "blue": "./dist/lightning-ui-components.d.ts",
+      "default": "./index.js"
     },
     "./src/": "./src/"
   },
-  "main": "./dist/lightning-ui-components.min.mjs",
   "types": "./dist/lightning-ui-components.d.ts",
   "scripts": {
     "start": "yarn run generateStorybookData && storybook dev -p 8000",
