feature(Storybook): makes minor djsuts ments to package.json files for exports and main

--- a/packages/@lightningjs/ui-components-theme-base/package.json
+++ b/packages/@lightningjs/ui-components-theme-base/package.json
@@ -8,6 +8,8 @@
   },
   "homepage": "https://rdkcentral.github.io/Lightning-UI-Components/",
   "type": "module",
+  "main": "./index.js",
+  "exports": "./index.js",
   "files": [
     "*.js"
   ],
