--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://rdkcentral.github.io/Lightning-UI-Components/",
   "sideEffects": false,
   "type": "module",
+  "main": "./index.js",
   "exports": {
     ".": {
       "red": "./dist/lightning-ui-components.min.mjs",
