--- a/packages/apps/lightning-ui-docs/package.json
+++ b/packages/apps/lightning-ui-docs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "yarn run generateStorybookData && storybook dev -p 8000",
     "build": "yarn run generateStorybookData && storybook build",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "generateStorybookData": "node ./scripts/generate-theme-props-table.mjs",
     "styleDocs": "node bin/translationScript.js"
   },
@@ -17,16 +17,16 @@
     "@lightningjs/ui-components": "workspace:^",
     "@lightningjs/ui-components-theme-base": "workspace:^",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-actions": "^7.0.24",
+    "@storybook/addon-actions": "^7.1.0",
     "@storybook/addon-designs": "^7.0.1",
-    "@storybook/addon-essentials": "^7.0.24",
-    "@storybook/addon-interactions": "^7.0.24",
-    "@storybook/addon-links": "^7.0.24",
-    "@storybook/addon-mdx-gfm": "^7.0.24",
-    "@storybook/addon-storysource": "^7.0.24",
-    "@storybook/blocks": "^7.0.27",
-    "@storybook/html": "^7.0.24",
-    "@storybook/html-webpack5": "^7.0.24",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-mdx-gfm": "^7.1.0",
+    "@storybook/addon-storysource": "^7.1.0",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/html": "^7.1.0",
+    "@storybook/html-webpack5": "^7.1.0",
     "@storybook/mdx1-csf": "^1.0.0",
     "@storybook/testing-library": "^0.2.0",
     "@yarnpkg/pnpify": "^4.0.0-rc.21",
@@ -37,7 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
-    "storybook": "^7.0.24"
+    "storybook": "^7.1.0"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6"
