fix: dependencies for pnp

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,36 @@
-nodeLinker: node-modules
+nodeLinker: "pnp"
+
+packageExtensions:
+  "babel-loader@*":
+    dependencies:
+      "@babel/core": "*"
+  "@babel/plugin-transform-react-jsx@*":
+    dependencies:
+      "@babel/core": "*"
+  "@mdx-js/loader@*":
+    dependencies:
+      "react": "*"
+  "@mdx-js/react@*":
+    dependencies:
+      "react": "*"
+  "@storybook/ui@*":
+    dependencies:
+      "react": "*"
+      "react-dom": "*"
+  "@storybook/builder-webpack5@*":
+    dependencies:
+      "react": "*"
+      "react-dom": "*"
+  "@storybook/manager-webpack5@*":
+    dependencies:
+      "react": "*"
+      "react-dom": "*"
+  "storybook-addon-turbo-build@*":
+    dependencies:
+      "webpack": "*"
+  "@lightningjs/ui-components@*": 
+    dependencies:
+      "@lightningjs/core": "*"
 
 changesetBaseRefs:
   - 'release'
