--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.19.3",
     "@lightningjs/ui-components-test-utils": "workspace:^",
     "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-docs": "6.5.14",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "enhanced-resolve": "^5.10.0",
