--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence,
-*  @erautenberg @joshhowenstine @anthony9187 @ImCoolNowRight @THoj13 @arwehrman @jazzyw @soumyaloka
+*  @erautenberg @joshhowenstine @anthony9187 @ImCoolNowRight @THoj13 @arwehrman @jazzyw @soumyaloka @slhay28
