--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -12,10 +12,9 @@
   "main": "./index.js",
   "exports": {
     ".": {
-      "red": "./dist/lightning-ui-components.min.mjs",
-      "yellow": "./dist/lightning-ui-components.min.cjs",
-      "blue": "./dist/lightning-ui-components.d.ts",
-      "default": "./index.js"
+      "import": "./dist/lightning-ui-components.min.mjs",
+      "require": "./dist/lightning-ui-components.min.cjs",
+      "types": "./dist/lightning-ui-components.d.ts"
     },
     "./src": "./index.js"
   },
