--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -9,19 +9,18 @@
   "homepage": "https://rdkcentral.github.io/Lightning-UI-Components/",
   "sideEffects": false,
   "type": "module",
-  "main": "./index.js",
   "exports": {
     ".": {
-      "red": "./dist/lightning-ui-components.min.mjs",
-      "yellow": "./dist/lightning-ui-components.min.cjs",
-      "blue": "./dist/lightning-ui-components.d.ts",
-      "default": "./index.js"
+      "import": "./dist/lightning-ui-components.min.mjs",
+      "require": "./dist/lightning-ui-components.min.cjs",
+      "types": "./dist/lightning-ui-components.d.ts"
     },
     "./src": "./index.js"
   },
+  "main": "./dist/lightning-ui-components.min.mjs",
   "types": "./dist/lightning-ui-components.d.ts",
   "scripts": {
-    "start": "yarn run generateStorybookData && storybook dev -p 8000",
+    "start": "yarn run generateStorybookData && yarn start-storybook --no-manager-cache -p 8000",
     "build": "rm -rf ./dist && rollup --config ../../../rollup/rollup.config.js --name lightning-ui-components",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --colors --silent",
     "test:updateSnapshot": "NODE_OPTIONS=--experimental-vm-modules jest --updateSnapshot --colors",
