--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "createComponent": "node bin/create.js"
   },
   "devDependencies": {
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@rollup/plugin-babel": "^6.0.2",
