--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -27,12 +27,14 @@
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --no-coverage --watch --colors"
   },
   "peerDependencies": {
-    "@lightningjs/core": "2.11.0"
+    "@lightningjs/core": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
     "@lightningjs/ui-components-test-utils": "workspace:^",
     "@mdx-js/react": "^1.6.22",
+    "@rollup/plugin-babel": "^6.0.4",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "enhanced-resolve": "^5.10.0",
