fix: add peer dependency for @lightningjs/core that includes a range

--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -27,8 +27,8 @@
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --no-coverage --watch --colors"
   },
   "peerDependencies": {
-    "@lightningjs/core": "^2.7.0"
-  },
+    "@lightningjs/core": ">=2.0.0 <=2.11.0"
+  },  
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
