--- a/packages/@lightningjs/ui-components/package.json
+++ b/packages/@lightningjs/ui-components/package.json
@@ -24,7 +24,8 @@
     "build": "rm -rf ./dist && rollup --config ../../../rollup/rollup.config.js --configPlugin @rollup/plugin-babel --name lightning-ui-components",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --colors --silent",
     "test:updateSnapshot": "NODE_OPTIONS=--experimental-vm-modules jest --updateSnapshot --colors",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --no-coverage --watch --colors"
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --no-coverage --watch --colors",
+    "typedoc": "typedoc --out typedocs index.d.ts"
   },
   "peerDependencies": {
     "@lightningjs/core": ">=2.0.0 <=2.11.0"
@@ -44,7 +45,8 @@
     "lightning-ui-docs": "workspace:^",
     "rollup": "^3.2.5",
     "semantic-release": "^19.0.5",
-    "semantic-release-monorepo": "^7.0.5"
+    "semantic-release-monorepo": "^7.0.5",
+    "typedoc": "^0.26.4"
   },
   "dependencies": {
     "@lightningjs/ui-components-theme-base": "workspace:^",
