feat(Storybook): upgrade to v8

--- a/packages/apps/lightning-ui-docs/package.json
+++ b/packages/apps/lightning-ui-docs/package.json
@@ -17,17 +17,20 @@
     "@lightningjs/ui-components": "workspace:^",
     "@lightningjs/ui-components-theme-base": "workspace:^",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-actions": "^7.6.6",
-    "@storybook/addon-designs": "^7.0.7",
-    "@storybook/addon-essentials": "^7.6.6",
-    "@storybook/addon-interactions": "^7.6.6",
-    "@storybook/addon-links": "^7.6.6",
-    "@storybook/addon-mdx-gfm": "^7.6.6",
-    "@storybook/addon-storysource": "^7.6.6",
-    "@storybook/blocks": "^7.6.6",
-    "@storybook/html": "^7.6.6",
-    "@storybook/html-webpack5": "^7.6.6",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-actions": "^8.2.9",
+    "@storybook/addon-designs": "^8.0.3",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-mdx-gfm": "^8.2.9",
+    "@storybook/addon-storysource": "^8.2.9",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/html": "^8.2.9",
+    "@storybook/html-webpack5": "^8.2.9",
+    "@storybook/manager-api": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@storybook/theming": "^8.2.9",
     "@yarnpkg/pnpify": "^4.0.0-rc.21",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
@@ -35,8 +38,8 @@
     "line-reader-sync": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark-gfm": "^3.0.1",
-    "storybook": "^7.6.6"
+    "remark-gfm": "^4.0.0",
+    "storybook": "^8.2.9"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6"
